hello-world-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: hello-world-installation
    meta.helm.sh/release-namespace: default

spec:
  selector:
    app: hello-world
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
